--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .App {
   font-family: "DM Sans", sans-serif;
-  background-color: #f8f8f8;
+  background-color: #ebebeb;
   min-height: 100vh;
 }
 
