--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,12 +1,29 @@
 .NavBar {
-  background-color: #ffffff;
+  background-color: #a0a0a0;
   border: 1px solid #dadadf;
 }
-  
+
 .NavLink {
   padding: 5px;
 }
 
 .Active i {
-  color: #2142b2;
+  color: #636363;
+}
+
+nav a {
+  color: #ffffff;
+}
+
+nav h1 {
+  font-family: "Playwrite IN", serif;
+  font-size: 20px;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  color: #ffffff;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
 }
