--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -29,3 +29,22 @@
     text-align: center;
     margin-top: 10px;
 }
+
+.imageWrapper {
+  width: 100%;
+  position: relative;
+  padding-top: 100%;
+  overflow: hidden;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+
+.postImage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
